tests/syntax_error/class_missing_type.jou
class Foo:
    x  # Error: expected ':' and a type after it (example: "foo: int"), got end of line
